spring data jpa : zipcode -> repo -> test 논리적 예외 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.password = bigdata
 mybatis.mapper-locations = classpath:mybatis3/*Mapper.xml
 
 #loggin 설정
+#logging.level.root=DEBUG
 logging.level.org.springframework.web.servlet.mvc.method.annotation = trace
 logging.level.org.hibernate.type.descriptor.sql = trace
 #jpa 설정
