5-24일자 pds,pilot 작성 - pds는 미완

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.datasource.url = jdbc:oracle:thin:@3.34.3.168:1521:XE
 spring.datasource.username = bigdata
 spring.datasource.password = bigdata
 
-#mybatis 설정
-mybatis.mapper-locations = classpath:mybatis3/*Mapper.xml
+#메세지 소스 설정
+spring.messages.basename=messages
 
 #loggin 설정
 #logging.level.root=DEBUG
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.hbm2ddl.auto = update
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-#19이상은 12c / 11은 10c? 10g? 둘중에 하나 적용하면 됨
+
 
 #devtool
 spring.devtools.livereload.enabled = true
