자료실 - 백엔드 작성, 목록보기/js작성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,14 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.hbm2ddl.auto = update
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
+#upload file
+saveDir = C:/Java/bootUpload/
+# 1개 최대 사이즈가 1MB로 제한됨
+spring.servlet.multipart.max-file-size = 1MB
+# 여러개 파일의 통합 최대 사이즈가 10MB로 제한됨
+spring.servlet.multipart.max-request-size = 10MB
+
+
 
 #devtool
 spring.devtools.livereload.enabled = true
